// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The governance overview page matches the snapshot (w/ id param) 1`] = `
<main
  className="easi-main-content easi-governance-overview grid-container margin-bottom-5"
  data-testid="governance-overview"
  id="main-content"
  role="main"
  tabIndex={-1}
>
  <nav
    aria-label="Breadcrumbs"
    className="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      className="usa-breadcrumb__list"
    >
      <li
        className="usa-breadcrumb__list-item"
      >
        <a
          className="usa-breadcrumb__link"
          href="/"
          onClick={[Function]}
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        className="usa-breadcrumb__list-item usa-current"
      >
        Add a new system or service
      </li>
    </ol>
  </nav>
  <a
    href="/"
    onClick={[Function]}
  >
    <i
      className="fa fa-angle-left margin-right-05 text-no-underline"
    />
    <span>
      Back
    </span>
  </a>
  <h1
    aria-live="polite"
    className="easi-h1"
    tabIndex={-1}
  >
    Add a new system or service
  </h1>
  <p
    className="line-height-body-5 font-body-lg text-light"
  >
    To add a new system or service, you need to go through a set of steps and get approved by the Governance Review Board (GRB).
  </p>
  <div
    className="easi-governance-overview__indented-wrapper"
  >
    <p
      className="easi-governance-overview__indented-body"
    >
      Use this process only if you'd like to add a new system, service or make major changes and upgrades to an existing one.
    </p>
  </div>
  <span>
    This step by step process will help you:
  </span>
  <ul
    className="margin-top-1 padding-left-205 line-height-body-5"
  >
    <li>
      work with Subject Matter Experts (SMEs) to refine your business case
    </li>
    <li>
      get a Lifecycle ID
    </li>
    <li>
      get approval for your request to then seek funding
    </li>
  </ul>
  <span>
    It can take between 4 to 6 weeks to go through all the steps and get a decision.
  </span>
  <div
    className="tablet:grid-col-6"
  >
    <h2
      className="font-heading-xl"
    >
      Steps in the governance process
    </h2>
    <ol
      className="usa-process-list"
    >
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill the intake request form
        </h3>
        <p>
          Tell the Governance admin team about your project/idea.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Feedback from initial review
        </h3>
        <p>
          The Governance admin team will review your intake request form and decide if it it needs further governance. If it does, they’ll direct you to go through the remaining steps.
        </p>
      </li>
    </ol>
    <hr
      className="margin-y-3"
    />
    <ol
      className="usa-process-list easi-governance-overview__governance-steps"
      start={3}
    >
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare your business case
        </h3>
        <p>
          Draft different solutions and the corresponding costs involved.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the Governance Review Team meeting
        </h3>
        <p>
          Discuss your draft business case with Governance Review Team. They will help you refine your business case into the best shape possible.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Feedback from the Governance Review Team
        </h3>
        <p>
          If the Governance Review Team has any additional comments, they will ask you to update your business case before it’s submitted to the Governance Review Board.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Submit the business case for final approval
        </h3>
        <p>
          Update the business case based on feedback from the review meeting and submit it to the Governance Review Board.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the Governance Review Board Meeting
        </h3>
        <p>
          The Governance Review Board will discuss and make decisions based on the business case and recommendations from the Governance Review Team.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Decision and next steps
        </h3>
        <p>
          If your business case is approved you will receive a unique Lifecycle ID. If it is not approved, you would need address the concerns to proceed.
        </p>
      </li>
    </ol>
  </div>
  <div
    className="margin-top-6 margin-bottom-7"
  >
    <div
      className="easi-collapsable-link"
    >
      <button
        aria-controls="GovernanceOverview-WhyGovernanceExists"
        aria-expanded={false}
        className="usa-button usa-button--unstyled"
        data-testid="collapsable-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="usa-icon"
          focusable={false}
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        Why does the governance process exist?
      </button>
    </div>
  </div>
  <a
    className="usa-button"
    href="/governance-task-list/test-intake-guid"
    onClick={[Function]}
  >
    Get started
  </a>
</main>
`;

exports[`The governance overview page matches the snapshot (w/o id param) 1`] = `
<main
  className="easi-main-content easi-governance-overview grid-container margin-bottom-5"
  data-testid="governance-overview"
  id="main-content"
  role="main"
  tabIndex={-1}
>
  <nav
    aria-label="Breadcrumbs"
    className="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      className="usa-breadcrumb__list"
    >
      <li
        className="usa-breadcrumb__list-item"
      >
        <a
          className="usa-breadcrumb__link"
          href="/"
          onClick={[Function]}
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        className="usa-breadcrumb__list-item usa-current"
      >
        Add a new system or service
      </li>
    </ol>
  </nav>
  <a
    href="/"
    onClick={[Function]}
  >
    <i
      className="fa fa-angle-left margin-right-05 text-no-underline"
    />
    <span>
      Back
    </span>
  </a>
  <h1
    aria-live="polite"
    className="easi-h1"
    tabIndex={-1}
  >
    Add a new system or service
  </h1>
  <p
    className="line-height-body-5 font-body-lg text-light"
  >
    To add a new system or service, you need to go through a set of steps and get approved by the Governance Review Board (GRB).
  </p>
  <div
    className="easi-governance-overview__indented-wrapper"
  >
    <p
      className="easi-governance-overview__indented-body"
    >
      Use this process only if you'd like to add a new system, service or make major changes and upgrades to an existing one.
    </p>
  </div>
  <span>
    This step by step process will help you:
  </span>
  <ul
    className="margin-top-1 padding-left-205 line-height-body-5"
  >
    <li>
      work with Subject Matter Experts (SMEs) to refine your business case
    </li>
    <li>
      get a Lifecycle ID
    </li>
    <li>
      get approval for your request to then seek funding
    </li>
  </ul>
  <span>
    It can take between 4 to 6 weeks to go through all the steps and get a decision.
  </span>
  <div
    className="tablet:grid-col-6"
  >
    <h2
      className="font-heading-xl"
    >
      Steps in the governance process
    </h2>
    <ol
      className="usa-process-list"
    >
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill the intake request form
        </h3>
        <p>
          Tell the Governance admin team about your project/idea.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Feedback from initial review
        </h3>
        <p>
          The Governance admin team will review your intake request form and decide if it it needs further governance. If it does, they’ll direct you to go through the remaining steps.
        </p>
      </li>
    </ol>
    <hr
      className="margin-y-3"
    />
    <ol
      className="usa-process-list easi-governance-overview__governance-steps"
      start={3}
    >
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare your business case
        </h3>
        <p>
          Draft different solutions and the corresponding costs involved.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the Governance Review Team meeting
        </h3>
        <p>
          Discuss your draft business case with Governance Review Team. They will help you refine your business case into the best shape possible.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Feedback from the Governance Review Team
        </h3>
        <p>
          If the Governance Review Team has any additional comments, they will ask you to update your business case before it’s submitted to the Governance Review Board.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Submit the business case for final approval
        </h3>
        <p>
          Update the business case based on feedback from the review meeting and submit it to the Governance Review Board.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the Governance Review Board Meeting
        </h3>
        <p>
          The Governance Review Board will discuss and make decisions based on the business case and recommendations from the Governance Review Team.
        </p>
      </li>
      <li
        className="usa-process-list__item"
      >
        <h3
          className="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Decision and next steps
        </h3>
        <p>
          If your business case is approved you will receive a unique Lifecycle ID. If it is not approved, you would need address the concerns to proceed.
        </p>
      </li>
    </ol>
  </div>
  <div
    className="margin-top-6 margin-bottom-7"
  >
    <div
      className="easi-collapsable-link"
    >
      <button
        aria-controls="GovernanceOverview-WhyGovernanceExists"
        aria-expanded={false}
        className="usa-button usa-button--unstyled"
        data-testid="collapsable-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="usa-icon"
          focusable={false}
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        Why does the governance process exist?
      </button>
    </div>
  </div>
</main>
`;
